--- a/ac/config/keymap.cfg
+++ b/ac/config/keymap.cfg
@@ -5,7 +5,7 @@ keymap -3 MOUSE2 "jump"
 keymap -2 MOUSE3 "weapon"
 keymap -4 MOUSE4 "weapon 2 3 1"
 keymap -5 MOUSE5 "weapon 4 1 2"
-keymap 8 BACKSPACE ""
+keymap 8 BACKSPACE "dropflag"
 keymap 9 TAB "showscores"
 keymap 12 CLEAR ""
 keymap 13 RETURN ""
