--- a/ac/config/sounds.cfg
+++ b/ac/config/sounds.cfg
@@ -44,6 +44,7 @@ registersound "misc/headshot"		// S_HEADSHOT
 registersound "misc/vote/vote_call" // S_CALLVOTE
 registersound "misc/vote/vote_pass" // S_VOTEPASS
 registersound "misc/vote/vote_fail" // S_VOTEFAIL
+registersound "player/footsteps"    // S_FOOTSTEPS
 registersound "misc/test"
 
 alias fade [ // 0=in, 1=out
