*** empty log message ***
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1362 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/source/src/Makefile
+++ b/ac/source/src/Makefile
@@ -47,7 +47,7 @@ CLIENT_OBJS= \
 	bot/ac_bot_ai.o 
 
 
-SERVER_LIBS=-L../enet -lenet
+SERVER_LIBS=-L../enet -lenet -lz
 SERVER_FILES= \
 	serverms.cpp \
 	server.cpp \
