--- a/ac/source/vcpp/cube.vcproj
+++ b/ac/source/vcpp/cube.vcproj
@@ -610,6 +610,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\src\servercontroller.h"
+				>
+			</File>
+			<File
 				RelativePath="..\src\sound.h"
 				>
 			</File>
