--- a/ac/source/wizard/vcpp/wizard.vcproj
+++ b/ac/source/wizard/vcpp/wizard.vcproj
@@ -60,7 +60,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				OutputFile="../../../server_wizard.exe"
+				OutputFile="../../../bin_win32/server_wizard.exe"
 				LinkIncremental="2"
 				GenerateDebugInformation="true"
 				SubSystem="1"
@@ -134,7 +134,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				OutputFile="../../../server_wizard.exe"
+				OutputFile="../../../bin_win32/server_wizard.exe"
 				LinkIncremental="1"
 				GenerateDebugInformation="true"
 				SubSystem="1"
