*** empty log message ***
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1378 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/source/wizard/src/Makefile
+++ b/ac/source/wizard/src/Makefile
@@ -1,9 +1,7 @@
 CXXOPTFLAGS=-O3 -fomit-frame-pointer
 INCLUDES=
 CXXFLAGS=$(CXXOPTFLAGS) $(INCLUDES) -fsigned-char -Wall -Wno-deprecated
-
-PLATFORM_PREFIX=native
-LIBS=-L/usr/X11R6/lib -L../enet -lenet `sdl-config --libs` -lSDL_image -lSDL_mixer -lz -lGL -lGLU 
+LIBS= 
 
 default:
 	$(CXX) $(CXXFLAGSS) wizard.cpp -o server_wizard $(LIBBS) 
