--- a/ac/config/sounds.cfg
+++ b/ac/config/sounds.cfg
@@ -45,6 +45,7 @@ registersound "misc/vote/vote_call" // S_CALLVOTE
 registersound "misc/vote/vote_pass" // S_VOTEPASS
 registersound "misc/vote/vote_fail" // S_VOTEFAIL
 registersound "player/footsteps"    // S_FOOTSTEPS
+registersound "player/land" 40      // S_SOFTLAND
 registersound "misc/test"
 
 alias fade [ // 0=in, 1=out
