--- a/ac/config/admin.cfg
+++ b/ac/config/admin.cfg
@@ -6,3 +6,6 @@ alias autoteam [ callvote 4 $arg1 ]
 alias forceteam [ callvote 5 $arg1 ]
 alias givemaster [ callvote 6 $arg1 ]
 alias map [ callvote 7 $arg1 $arg2 ]
+alias recorddemo [ callvote 8 $arg1 ]
+alias stopdemo [ callvote 9 ]
+alias cleardemos [ callvote 10 $arg1 ]
