ac_power+new model
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1393 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/packages/maps/ac_power.cfg
+++ b/ac/packages/maps/ac_power.cfg
@@ -78,6 +78,7 @@ mapmodel 0 0 0 0 "wires/3x8"       //57
 mapmodel 0 0 0 0 "wires/2x8"       //58
 mapmodel 0 0 0 0 "wires/4x8a"      //59
 mapmodel 0 0 0 0 "wires/4x8"       //60
+mapmodel 0 0 0 0 "drainpipe"       //61
 
 // skybox for this map - check /packages/skymaps/
 
