--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -36,11 +36,11 @@ alias genmapitems [
 
 newmenu maps
 
-genmapitems "ac_complex ac_mines ac_depot ac_desert ac_desert2 ac_snow ac_power"
+genmapitems "ac_complex ac_mines ac_depot ac_desert ac_desert2 ac_snow ac_power ac_elevation"
 
 newmenu maps_ctf 
 
-genmapitems "ac_mines ac_depot ac_power"
+genmapitems "ac_mines ac_depot ac_power ac_elevation"
 
 newmenu setup
 
@@ -544,7 +544,7 @@ menuitem ""
 menuitem "Thanks to:" ""
 menuitem "Aardappel (Engine), Rick (Bots), absinth (AC for Mac)" ""
 menuitem "JCDPC (Laptop Model, Company), dtd (Hosting), Boeck" ""
-menuitem "DCP (music), ac_stef (bug fixes)"
+menuitem "DCP (music), ac_stef (bug fixes), RandomIdiot"
 menuitem "Ted Southard (DigitalFlux), Noctua Graphics, Arcitool,"
 menuitem "Craig Fortune, 3dcafe, Rohrschach, lemong.fr,"
 menuitem "Mayang.com, Chris Zastrow, imageafter.com (textures)"
