crouching, jump sounds
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1421 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/keymap.cfg
+++ b/ac/config/keymap.cfg
@@ -121,7 +121,7 @@ keymap 300 NUMLOCK ""
 keymap 301 CAPSLOCK ""
 keymap 302 SCROLLOCK ""
 keymap 303 RSHIFT ""
-keymap 304 LSHIFT ""
+keymap 304 LSHIFT "crouch"
 keymap 305 RCTRL "jump"
 keymap 306 LCTRL "jump"
 keymap 307 RALT ""
