--- a/ac/config/sounds.cfg
+++ b/ac/config/sounds.cfg
@@ -1,5 +1,6 @@
 registersound "player/jump"         //S_JUMP
-registersound "player/land"         //S_LAND 
+registersound "player/step" 60      // S_SOFTLAND
+registersound "player/land" 40      // S_HARDLAND
 registersound "weapon/knife"        //S_KNIFE
 registersound "weapon/usp"          //S_PISTOL
 registersound "weapon/pistol_reload"           //S_RPISTOL
@@ -45,7 +46,6 @@ registersound "misc/vote/vote_call" // S_CALLVOTE
 registersound "misc/vote/vote_pass" // S_VOTEPASS
 registersound "misc/vote/vote_fail" // S_VOTEFAIL
 registersound "player/footsteps" 100 1    // S_FOOTSTEPS
-registersound "player/land" 40      // S_SOFTLAND
 registersound "misc/test"
 
 alias fade [ // 0=in, 1=out
