--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -6,7 +6,6 @@ newmenu main
 
 menuitem "Multiplayer"  	        "showmenu multiplayer"
 menuitem "Singleplayer"				"showmenu singleplayer"
-menuitem "Load Map"					"showmenu maps"
 menuitem "Player Setup"				"showmenu setup"
 menuitem "Options"                  "showmenu options"
 menuitem "Editing"        			"showmenu editing"
@@ -99,6 +98,13 @@ newmenu crosshairs
 gencrosshairs "default.png cube.png dot.png dot_wide.png o.png o_dot.png o_x.png star.png wide.png x-dot.png"
 
 
+newmenu demo
+
+menuitem "record demo"      "recorddemo"
+menuitem "stop recording"   "stopdemo"
+menuitem "list demos"       "listdemos"
+menuitem "getdemo"          "getdemo"
+
 newmenu multiplayer
 
 menuitem "Join Game"              	"showmenu server"
@@ -152,6 +158,7 @@ newmenu singleplayer
 //menuitem "Bot Team Deathmatch"				"alias tmp_mode 7; showmenu botskill"
 menuitem "Bot Deathmatch"					"alias tmp_mode 8; showmenu botskill"
 menuitem "Bot One Shot, One Kill"           "alias tmp_mode 12; showmenu botskill"
+menuitem "Empty Map"                        "showmenu maps"
 
 newmenu botskill
 
