--- a/ac/config/defaults.cfg
+++ b/ac/config/defaults.cfg
@@ -10,10 +10,6 @@ autoreload 1	   // reload the guns automatically
 
 alias maxmusicvol 120 // set higher if you want (max 255)
 
-bind F6 showmip
-bind F5 toggleocull
-bind F11 toggleconsole
-
 // example WASD
 
 bind W forward
@@ -111,7 +107,9 @@ bind Z [ domodifier 2 ]
 bind X [ domodifier 3 ]
 
 alias universaldelta [
-  if $editing [ alias s "edit" ] [ alias s "game" ]
+  if $editing [ alias s "edit" ] [ 
+    if (alive) [ alias s "game" ] [ alias s "spect" ]
+  ]
   concatword delta _ $s _ $modifier
   s
 ]
@@ -127,6 +125,8 @@ alias delta_edit_4 [ equalize $flrceil ]
 alias delta_edit_5 [ entproperty 0 $arg1 ]  // and the others
 
 alias delta_game_0 [ if (= $arg1 1) [ shiftweapon 1 ] [ shiftweapon -1 ] ]
+
+alias delta_spect_0 [ followplayer $arg1 ]
 
 bind KP_MINUS "conskip 1"
 bind KP_PLUS "conskip -1000"
