--- a/ac/config/keymap.cfg
+++ b/ac/config/keymap.cfg
@@ -2,9 +2,9 @@
 
 keymap -1 MOUSE1 "attack"
 keymap -3 MOUSE2 "jump"
-keymap -2 MOUSE3 "weapon"
-keymap -4 MOUSE4 "weapon 2 3 1"
-keymap -5 MOUSE5 "weapon 4 1 2"
+keymap -2 MOUSE3 ""
+keymap -4 MOUSE4 ""
+keymap -5 MOUSE5 ""
 keymap 8 BACKSPACE "dropflag"
 keymap 9 TAB "showscores"
 keymap 12 CLEAR ""
@@ -106,13 +106,13 @@ keymap 282 F1 "vote 1"
 keymap 283 F2 "vote 2"
 keymap 284 F3 ""
 keymap 285 F4 ""
-keymap 286 F5 ""
-keymap 287 F6 ""
+keymap 286 F5 "toggleocull"
+keymap 287 F6 "showmip"
 keymap 288 F7 ""
 keymap 289 F8 ""
 keymap 290 F9 ""
 keymap 291 F10 ""
-keymap 292 F11 ""
+keymap 292 F11 "toggleconsole"
 keymap 293 F12 "screenshot"
 keymap 294 F13 ""
 keymap 295 F14 ""
