--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -421,10 +421,10 @@ menuitem "Set map title/author"               "saycommand /mapmsg "
 newmenu "weapons"
 
 menumdl weapons/assault/menu mapmodel 75 12
-menuitem "MTP-57 Assault Rifle"			"item 5;echo MTP-57 Assault Rifle chosen" "chmenumdl weapons weapons/assault/menu mapmodel 75 12"
-menuitem "A-ARD/10 Submachine Gun"		"item 3;echo A-ARD/10 Submachine Gun chosen" "chmenumdl weapons weapons/subgun/menu mapmodel 75 12"
-menuitem "Precision Tech AD-81 Sniper Rifle"     "item 4;echo Precision Tech AD-81 Sniper Rifle chosen" "chmenumdl weapons weapons/sniper/menu mapmodel 75 12"
-menuitem "V-19 Combat Shotgun"			"item 2;echo V-19 Combat Shotgun chosen" "chmenumdl weapons weapons/shotgun/menu mapmodel 75 12"
+menuitem "MTP-57 Assault Rifle"			"nextprimary 5;echo MTP-57 Assault Rifle chosen" "chmenumdl weapons weapons/assault/menu mapmodel 75 12"
+menuitem "A-ARD/10 Submachine Gun"		"nextprimary 3;echo A-ARD/10 Submachine Gun chosen" "chmenumdl weapons weapons/subgun/menu mapmodel 75 12"
+menuitem "Precision Tech AD-81 Sniper Rifle"     "nextprimary 4;echo Precision Tech AD-81 Sniper Rifle chosen" "chmenumdl weapons weapons/sniper/menu mapmodel 75 12"
+menuitem "V-19 Combat Shotgun"			"nextprimary 2;echo V-19 Combat Shotgun chosen" "chmenumdl weapons weapons/shotgun/menu mapmodel 75 12"
 
 
 //newmenu "secondary"
