--- a/ac/config/docs.cfg
+++ b/ac/config/docs.cfg
@@ -83,9 +83,10 @@ docsection [Gameplay]
 
 docident [connect] [Connects to a server.];
 docargument [N] [the (dns) name or ip of the server] [] [0];
+docargument [O] [the port] [] [0];
 docargument [P] [the server password] [] [0];
-docremark [If the server name ist omitted, the client will try to connect to an available server in the LAN.];
-docexample [connect 127.0.0.1 myServerPassword] [];
+docremark [If the server name ist omitted, the client will try to connect to an available server in the LAN. If the port is omitted or set to 0, the default port will be used.];
+docexample [connect 127.0.0.1 555 myServerPassword] [];
 
 docident [connectadmin] [Connects to a server and tries to claim admin state.];
 docargument [N] [the (dns) name or ip of the server] [] [0];
@@ -99,30 +100,43 @@ docargument [S] [the demo name] [] [0];
 docremark [Playback is interpolated for the player whose perspective you view.];
 
 docident [demodelaymsec] [Changes the demo playback delay.];
-docargument [D] [delay in milliseconds] [min 0/max 500/default 120];
+docargument [D] [delay in milliseconds] [ read-only];
 docremark [Only touch if you know what you are doing: changes the delay in msec with which the demo is played back to allow for interpolation. Default is 100, if you decrease it you will most likely just get choppier (it will obstruct the spline interpolation) for an unnoticable bit less lag. Increase it if you notice choppyness in playback, should not be needed in general, but may help if you insist on playing back demos at very low demoplaybackspeed.];
 
 docident [demoplaybackspeed] [Sets the playback speed for a demo.];
-docargument [P] [the playback speed] [min 10/max 1000/default 100];
+docargument [P] [the playback speed] [ read-only];
 docremark [To see the effect, the variable must be set before playing a demo.];
 
 docident [demoplayer] [Shifts the camera to an other demo player];
 docargument [N] [the shift direction] [1 (forwards), -1 (backwards)] [0];
 
 docident [demotracking] [Specifies if particles should be emitted on demo players position.];
-docargument [B] [sets the demo tracking state] [1 (on), 0 (off) min 0/max 1/default 0];
+docargument [B] [sets the demo tracking state] [1 (on), 0 (off) read-only];
 docremark [When demotracking is on (B = 1), the camera will create a red particle every frame where it moves, creating a trail. This can be used to inspect someone's movement in a game. It will only show the last N particles according to the maxparticles variable, which you may want to increase to 10000. The particles will remain even after you stop the demo, so you can use edit mode to look at it from all angles.];
 
 docident [disconnect] [Leaves a server.];
 
+docident [footstepalign] [Maximum time span between player animation and the playback of the footstep sound];
+docargument [T] [time span] [ read-only];
+docremark [If the footstep sound would be played immediately when entering the radius of the other player, it would not be synchronous to the player model animation.];
+
+docident [footsteps] [Indicates if the footsteps sound should be played];
+docargument [B] [enable footsteps] [1 (true), 0 (false) read-only];
+
 docident [gamespeed] [Sets the gamespeed in percent.];
-docargument [N] [the game speed] [min 10/max 1000/default 100];
+docargument [N] [the game speed] [ read-only];
 docremark [This does not work in multiplayer. For entertainment purposes only :)];
 
 docident [getmap] [Retrieves the last map that was sent to the server using 'sendmap'.];
 
 docident [hidestats] [Turns on/off display of fps/rendering stats on the HUD.];
-docargument [B] [Turns the stats off (1) or on (0)] [min 0/max 1/default 1];
+docargument [B] [Turns the stats off (1) or on (0)] [ read-only];
+
+docident [magcontent] [Returns contents of current magazine.];
+docargument [N] [the weapon number] [0 (knife), 1 (pistol), 2 (shotgun), 3 (sub), 4 (sniper), 5 (assault), 6 (grenades)] [0];
+
+docident [magreserve] [Returns contents of magazine reserve.];
+docargument [N] [the weapon number] [0 (knife), 1 (pistol), 2 (shotgun), 3 (sub), 4 (sniper), 5 (assault), 6 (grenades)] [0];
 
 docident [mode] [Set gameplay mode to N for the next game played (next map load).];
 docargument [N] [the mode number] [TODO] [0];
@@ -166,10 +180,11 @@ docargument [N] [the weapon number] [0 (knife), 1 (pistol), 2 (shotgun), 3 (sub)
 docsection [General]
 
 docident [aadynshadow] [Sets the size/resolution of the dynamic shadow data.];
-docargument [] [the size] [min 0/max 3/default 2];
+docargument [] [the size] [ read-only];
 
 docident [addserver] [Adds a server to the list of server to query in the server list menu.];
 docargument [S] [the name of the server (cn/ip)] [] [0];
+docargument [P] [the port] [] [0];
 
 docident [alias] [Binds a name to commands.];
 docargument [N] [the name of the alias] [string, must not contain '$'] [0];
@@ -178,13 +193,13 @@ docremark [It is possible to re-bind an alias, even during its evaluation.];
 docremark [Example: alias myalias [ echo "hello world"; alias myalias [ echo "I already said hello" ] ]];
 
 docident [animationinterpolationtime] [Sets the time available for interpolation between model animations.];
-docargument [N] [the amount of milliseconds for the interpolation] [min 0/max 1000/default 100];
+docargument [N] [the amount of milliseconds for the interpolation] [ read-only];
 
 docident [attack] [Fires the current weapon.];
 docremark [default: left mouse button];
 
 docident [autoreload] [Indicates if the weapons should be reloaded automatically.];
-docargument [B] [the autoreload state] [on (1), off (0) min 0/max 1/default 1];
+docargument [B] [the autoreload state] [on (1), off (0) read-only];
 
 docident [autoteam] [Sets the automated team assignement.];
 docargument [B] [enables or disables auto team] [1 (on), 0 (off)] [0];
@@ -214,10 +229,10 @@ docident [clearminimap] [Recreates the minimap for the current map.];
 docident [clearsecuremaps] [Clears the list of secured maps.];
 
 docident [colorbits] [Sets the bits per pixel value.];
-docargument [] [bits per pixel] [min 0/max 32/default 0];
+docargument [] [bits per pixel] [ read-only];
 
 docident [connected] [Indicates if a connection to a server exists.];
-docargument [B] [the connection state] [1 (connected), 0 (disconnected) min 0/max 1/default 0];
+docargument [B] [the connection state] [1 (connected), 0 (disconnected) read-only];
 
 docident [conskip] [Allows to browse through the console history by offsetting the console output.];
 docargument [N] [the offset] [] [0];
@@ -225,15 +240,15 @@ dockey [KP_MINUS] [- on the keypad] [scrolls into the history (conskip 1)];
 dockey [KP_PLUS] [+ on the keypad] [resets the history (conskip -1000)];
 
 docident [crosshairfx] [Turns on or off crosshair effects.];
-docargument [B] [Turns the effects on (1) or off (0)] [min 0/max 1/default 1];
+docargument [B] [Turns the effects on (1) or off (0)] [ read-only];
 docremark [When on, the crosshair will go grey when the weapon is reloading, orange when health se 50 or red when se 25.];
 
 docident [crosshairsize] [Sets the size of your crosshair.];
-docargument [N] [the crosshair size] [min 0/max 50/default 15];
+docargument [N] [the crosshair size] [ read-only];
 docremark [The crosshair is turned off entirely if the size is set to 0.];
 
 docident [depthbits] [Sets the bits for the depth buffer.];
-docargument [] [depth pixels] [min 0/max 32/default 0];
+docargument [] [depth pixels] [ read-only];
 
 docident [docargument] [Adds a new argument documentation to the last added identifier.];
 docargument [T] [the token] [] [0];
@@ -286,14 +301,14 @@ docargument [T] [XML stylesheet to use] [] [0];
 docremark [The generated reference is written to "config/autogenerated_base_reference.xml" by default. The three arguments can be changed later on in the generated XML document.];
 
 docident [dynlight] [Determines wether dynamic shadows and lights are rendered, providedjust incase they slow your fps down too much.];
-docargument [R] [the radius of a dynamic light] [min 0/max 32/default 16];
+docargument [R] [the radius of a dynamic light] [ read-only];
 docremark [With radius you can specify the radius of a dynamic light, smaller to maybe gain some speed (0 is off entirely), or bigger to see the effect of dynamic shadows more dramatically (try shooting it past some pillars that have a dark area on the other side... or use the "gamespeed" variable).];
 
 docident [dynshadow] [Sets the alpha value (transparency) for dynamic shadows.];
-docargument [] [the alpha value] [min 0/max 100/default 40];
+docargument [] [the alpha value] [ read-only];
 
 docident [dynshadowsize] [Sets the display size of the dynamic shadows.];
-docargument [] [the size] [min 4/max 8/default 5];
+docargument [] [the size] [ read-only];
 
 docident [exec] [Executes all commands in a specified config file.];
 docargument [C] [the config file] [] [0];
@@ -317,17 +332,17 @@ docident [fov] [Sets the field of view (fov).];
 docargument [N] [the fov value] [60..120] [0];
 
 docident [fsaa] [Sets the level of fullscreen antialiasing (FSAA).];
-docargument [] [fsaa] [min 0/max 16/default 0];
+docargument [] [fsaa] [ read-only];
 
 docident [fullscreen] [Enables or disables fullscreen.];
-docargument [] [fullscreen] [min 0/max 1/default 1];
+docargument [] [fullscreen] [ read-only];
 docremark [Not supported on Windows and Mac.];
 
 docident [gamemode] [Holds the current game mode.];
-docargument [] [gamemode] [min 1/max 0/default 0];
+docargument [] [gamemode] [ read-only];
 
 docident [gamma] [Sets the hardware gamma value.];
-docargument [N] [the gamma value] [min 30/max 300/default 100];
+docargument [N] [the gamma value] [ read-only];
 docremark [May not work if your card/driver doesn't support it.];
 
 docident [givemaster] [Gives the master state to specified player.];
@@ -362,7 +377,7 @@ docargument [E] [the error value, 1 being the best quality] [ read-only];
 docremark [If this variable is changed this during play, a "recalc" is needed to see the effect.];
 
 docident [lightscale] [Used to finetune the "overbright lighting" rendering feature when enabled.];
-docargument [N] [the brightness of the scene] [min 1/max 100/default 4];
+docargument [N] [the brightness of the scene] [ read-only];
 docremark [After changing this value, a "recalc" is needed to see the differences.];
 
 docident [map] [Loads up a map in the gamemode set previously by the 'mode' command.];
@@ -377,7 +392,7 @@ docargument [N] [the master mode] [0 (open), 1 (private)] [0];
 docremark [Requires master or admin state. If the mastermode is set to 'private', no more clients can join the server. Default is 'open' that allows anyone to join the server.];
 
 docident [maxroll] [Sets the maximum value the display will roll on strafing.];
-docargument [N] [the roll value] [min 0/max 20/default 0];
+docargument [N] [the roll value] [ read-only];
 
 docident [menuitem] [Creates a new menuitem.];
 docargument [N] [the name of the menuitem] [] [0];
@@ -394,7 +409,7 @@ docident [millis] [Returns the number of milliseconds since engine start.];
 docexample [echo (millis)] [];
 
 docident [minimapres] [Sets the resolution for the minimap.];
-docargument [N] [the resoution] [min 7/max 10/default 9];
+docargument [N] [the resoution] [ read-only];
 
 docident [minmillis] [Sets the minimum number of milliseconds a frame should take.];
 docargument [N] [the number of milliseconds] [integer, 0 (off), default is 5] [0];
@@ -412,12 +427,12 @@ docremark [This command must be placed in an action in a bind or in an alias in 
 docexample [bind CTRL [ echo "key pressed"; onrelease [ echo "key released" ] ]] [];
 
 docident [particlesize] [Scales all particles.];
-docargument [P] [the scale percentage] [min 20/max 500/default 100];
+docargument [P] [the scale percentage] [ read-only];
 
 docident [quit] [Quits the game without asking.];
 
 docident [rate] [Sets the clients maximum downstream bandwidth.];
-docargument [N] [the bytes per second] [min 0/max 25000/default 0];
+docargument [N] [the bytes per second] [ read-only];
 docremark [Leaving it at 0 (the default) means the server will dynamically try to do the best thing, this is recommended for players who don't have a clue what their bandwidth is (setting your rate unoptimally is worse than not setting it all). Modem players (56k) could try rate 4000 and tweak from there, dsl players can try rate 6000-10000. Note that the more players on a server, the more critical the effect of your rate. If you are tweak addicted, you can try playing with the variables throttle_decel (how quickly to start dropping packets when your connection becomes bandwidth limited) throttle_accel (how quickly to recover once bandwidth becomes available again) and throttle_interval (how quickly to reestimate the situation). Change the defaults at your own risk.];
 
 docident [removebans] [Removes all bans on the server.];
@@ -427,7 +442,7 @@ docident [right] [Moves the player right.];
 docremark [default keys: D and Right Arrow];
 
 docident [saveshadows] [Sets if dynamic shadows should be saved to disk.];
-docargument [] [auto save] [min 0/max 1/default 1];
+docargument [] [auto save] [ read-only];
 
 docident [screenshot] [Takes a screenshot.];
 docremark [Screenshots are saved to "screenshots/screenshotN.bmp", where N is the number of milliseconds since the game was launched.];
@@ -455,30 +470,30 @@ docargument [N] [the name of a previously defined menu] [] [0];
 docremark [The menu allows the user to pick an item with the cursor keys. Upon pressing return, the associated action will be executed. Pressing ESC will cancel the menu.];
 
 docident [soundbufferlen] [Sets the sound buffer length.];
-docargument [N] [the buffer length] [min 128/max 4096/default 1024];
+docargument [N] [the buffer length] [ read-only];
 docremark [Tweak this if you experience stuttering or lagging sound.];
 
 docident [soundvol] [Sets the sound volume.];
-docargument [N] [the volume] [min 0/max 255/default 155];
+docargument [N] [the volume] [ read-only];
 
 docident [src_h] [Sets the screen height.];
-docargument [] [the screen height] [min 0/max 768/default 10000];
+docargument [] [the screen height] [ read-only];
 
 docident [src_w] [Sets the screen width.];
-docargument [] [the screen width] [min 0/max 1024/default 10000];
+docargument [] [the screen width] [ read-only];
 
 docident [teamdisplaymode] [Sets the team display mode.];
-docargument [N] [the team display mode] [0 (none), 1 (color vests), 2 (color skins) min 0/max 2/default 1];
+docargument [N] [the team display mode] [0 (none), 1 (color vests), 2 (color skins) read-only];
 docremark [In mode 1 players will be rendered with a colored vest to make the teams distinguishable. In mode 2 almost the whole suit of the players will be colored. These display modes are only applied in team gamemodes.];
 
 docident [updatefrommaster] [Contacts the masterserver and adds any new servers to the server list.];
 docremark [The servers are written to the config/servers.cfg file. This menu can be reached through the Multiplayer menu.];
 
 docident [vsync] [Enables or disables vsync.];
-docargument [] [vsync] [min -1/max 1/default -1];
+docargument [] [vsync] [ read-only];
 
 docident [watersubdiv] [Determines the subdivision of the water surface in maps.];
-docargument [N] [the subdivisioin value] [min 1/max 64/default 4];
+docargument [N] [the subdivisioin value] [ read-only];
 docremark [Must be a power of 2: 4 is the default, 8 is recommended for people on slow machines, 2 is nice for fast machines, and 1 is quite OTT. See "waterlevel" (edit reference) on how to add water to your own levels.];
 
 docsection [Editing]
@@ -565,19 +580,27 @@ docident [mapmsg] [Sets the map message, which will be displayed when the map lo
 docargument [M] [the map message] [string] [0];
 docremark [For example: mapmsg "Map By Author".];
 
+docident [mapsound] [Defines a mapsound.];
+docargument [N] [path to the sound file] [] [0];
+docargument [V] [volume adjustment] [1..255, default is 0] [0];
+docargument [M] [maximum simultaneous sounds] [default 0 (unlimited)] [0];
+docremark [Registers the sound as a map-specific sounds. These map-specific sounds may currently only be used with "sound" entities within a map. The first map sound registered in a map has index 0, and increases afterwards.];
+
 docident [newent] [Adds a new entity];
-docargument [type] [the entity type] [light, playerstart, clips, ammobox, grenades, health, armour, akimbo, mapmodel, trigger, ladder, ctf-flag] [0];
+docargument [type] [the entity type] [light, playerstart, clips, ammobox, grenades, health, armour, akimbo, mapmodel, ladder, ctf-flag] [0];
 docargument [value1] [see newent 'type'] [] [0];
 docargument [value2] [see newent 'type'] [] [0];
 docargument [value3] [see newent 'type'] [] [0];
 docargument [value4] [see newent 'type'] [] [0];
 docremark [(x,y) is determined by the current selection (the red dot corner) and z by the camera height, of said type. Type is a string giving the type of entity, such as "light", and may optionally take values (depending on the entity).];
 
-docident [newent ammo] [Adds a new ammo box item.];
+docident [newent akimbo] [Adds a new akimbo item.];
+
+docident [newent ammobox] [Adds a new ammo box item.];
 
 docident [newent armour] [Adds a new armour item.];
 
-docident [newent armour] [Adds a new akimbo item.];
+docident [newent armour] [Adds a new armour item.];
 
 docident [newent clips] [Adds a new clip item.];
 
@@ -609,13 +632,11 @@ docremark [The mapmodel identifier is the desired map model which is defined by 
 docident [newent playerstart] [Adds a new spawn spot.];
 docremark [The yaw is taken from the current camera yaw.];
 
-docident [newent teledest] [Creates a teleport destination.];
-docargument [N] [the teleport identifier] [0..255] [0];
-docremark [Teleports are linked to a teledest with the same identifier. The teledest uses the current camera yaw.];
-
-docident [newent teleport] [Creates a teleport connection.];
-docargument [N] [the teleport identifier] [0..255] [0];
-docremark [Teleports are linked to a teledest with the same identifier.];
+docident [newent sound] [Adds a sound entity.];
+docargument [N] [the sound to play] [integer] [0];
+docargument [R] [the radius] [] [0];
+docargument [S] [the size] [default 0] [0];
+docremark [Will play map-specific sound so long as the player is within the radius. However, only up to the max uses allowed for N (specified in the mapsound command) will play, even if the player is within the radius of more N sounds than the max. By default (size 0), the sound is a point source. Its volume is maximal at the entity's location, and tapers off to 0 at the radius. If size is specified, the volume is maximal within the specified size, and only starts tapering once outside this distance. Radius is always defined as distance from the entity's location, so a size greater than or equal to the radius will just make a sound that is always max volume within the radius, and off outside.];
 
 docident [newmap] [Creates a new map.];
 docargument [S] [the size of the new map] [6..12] [0];
